force-app/main/default/objects/Salesforce_Authorization__mdt/Salesforce_Authorization__mdt.object-meta.xml
<CustomObject>
    <label>Salesforce Authorization</label>
    <pluralLabel>Salesforce Authorizations</pluralLabel>
</CustomObject>