force-app/main/default/objects/Salesforce_Authorization__mdt/fields/Client_ID__c.field-meta.xml
<CustomField>
    <fullName>Client_ID__c</fullName>
    <label>Client ID</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>