force-app/main/default/objects/Salesforce_Authorization__mdt/fields/Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>Client_Secret__c</fullName>
    <label>Client Secret</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>