force-app/main/default/objects/Salesforce_Authorization__mdt/fields/Expire_Time__c.field-meta.xml
<CustomField>
    <fullName>Expire_Time__c</fullName>
    <label>Expire Time</label>
    <type>DateTime</type>
</CustomField>